20632 external relation meta section fix
use JDK map instead of guava